css/style.css
/* General */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* APP and repeating settings */
.appContainer {
  height: 100vh;
  width: 100vw;
  padding: 3% 5% 3% 5%;
  display: flex;
  position: absolute;
  z-index: 1;
  background: linear-gradient(
    180deg,
    transparent 0,
    transparent 100px,
    #dbdcd6 0
  );
  background-color: #009889;
  font-family: Helvetica, sans-serif;
}

.userInfo,
.contactInfo,
.searchBar,
.alert,
.chat,
.keyboard {
  padding: 0px 5px 0px 5px;
  background-color: rgba(235, 235, 235, 1);
  font-size: 0.8rem;
}

.userInfo,
.contactInfo {
  min-height: 8%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

i {
  margin: 5px;
  color: grey;
}

/* LEFT SIDE */
.leftSide {
  width: 35%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.alert {
  width: 100%;
  background-color: #8fdcfd;
  display: flex;
  align-items: center;
}
.alert > i {
  background-color: white;
  border-radius: 50%;
  padding: 10px;
  color: #8fdcfd;
}
.alert > .alertDescription {
  font-size: 0.6rem;
  color: #17337c;
}
.alert > .alertDescription > a {
  color: grey;
}

.searchBar {
  display: flex;
  align-items: center;
  padding: 3px 5px;
  width: 100%;
  border-bottom: solid 1px #e3e3e3;
}
.searchBar input {
  width: 100%;
  border: solid 1px #e3e3e3;
  padding: 4px;
  border-radius: 5px;
}

.availableChats {
  flex-grow: 1;
  width: 100%;
  overflow-y: scroll;
  position: relative;
  z-index: 0;
  background-color: #ffffff;
}
.chat {
  height: 13%;
  width: 100%;
  border-bottom: solid 1px #e3e3e3;
  background-color: #ffffff;
}
.chatActive {
  background-color: lightgrey;
}

#lastMessage,
#visibility {
  color: grey;
  font-size: 0.6rem;
  flex-grow: 0;
}
#timeLastMessage {
  display: flex;
  justify-content: flex-end;
  flex-grow: 1;
  font-size: 0.6rem;
  color: grey;
}
#messageTime {
  font-size: 0.6rem;
  color: grey;
}

.user,
.contact,
.chat {
  display: flex;
  align-items: center;
}
.user img,
.chat img,
.contactInfo img {
  flex-grow: 0;
  height: 33px;
  border-radius: 50%;
  margin: 4px;
}

/* RIGHT SIDE */
.rightSide {
  width: 65%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.contactInfo {
  border-left: solid 1px #e3e3e3;
}

.chatArea {
  width: 100%;
  flex-grow: 1;
  background-image: url("../img/mine.jpg");
  display: flex;
  flex-direction: column;
}

.message {
  display: flex;
  flex-direction: column;
  font-size: 0.9rem;
  width: fit-content;
  max-width: 50%;
  margin: 5px 10px 0px 10px;
  padding: 10px;
  border-radius: 11px;
  line-height: 15px;
}

.messageSent {
  background-color: #d6f9bc;
  align-self: end;
  align-items: end;
}
.messageReceived {
  background-color: white;
}

.keyboard {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  height: 6%;
  width: 100%;
  background-color: #f3efeb;
}
.keyboard textarea {
  height: 80%;
  width: 85%;
  font-family: Helvetica, sans-serif;
  padding: 2px;
  border: none;
  border-radius: 10px;
}

